--- a/bookingservice/src/main/resources/application.properties
+++ b/bookingservice/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.password=Sunil@20csu371
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 # create, create-drop
 spring.jpa.hibernate.ddl-auto=update
-payment.url=http://localhost:8083/payment/pay
+payment.url=http://localhost:8083/transaction
